# pixels-lance

./: .gitignore  INSTALL.md  LICENSE  PARALLEL_FETCH.md  QUICKSTART.md  README.md  S3_SETUP.md  STORAGE.md  examples.py  examples_grpc.py  fetch_all_tables.py  fetch_all_tables.sh  install.sh  pyproject.toml  requirements-dev.txt  requirements.txt  test_setup.py
.github/: copilot-instructions.md
config/: .env.example  config.yaml  schema_chbenchmark.yaml  schema_hybench.yaml
docs/: DATA_IMPORT.md  INSTALL.md  MULTIPROCESSING_CHANGES.md  PARALLEL_FETCH.md  PROFILING_ANALYSIS.md  QUICKSTART.md  S3_SETUP.md  STORAGE.md
proto/: README.md  sink.proto
scripts/: README.md  ensure_index.py  fetch_all_tables.py  fetch_all_tables.sh  import_data.py  install.sh  profile_fetch.sh  verify_pk_metadata.py
src/pixels_lance/: __init__.py  cli.py  config.py  fetcher.py  grpc_fetcher.py  logger.py  parser.py  storage.py
src/pixels_lance/proto/: __init__.py  sink_pb2.py  sink_pb2.pyi  sink_pb2_grpc.py
tests/: debug_config.py  test_grpc.py  test_parser.py  test_pk_metadata_creation.py  test_primary_key_metadata.py  test_query_customer.py  test_s3_connection.py  test_schema_casting.py  test_timestamp_precision.py  test_update_logic.py
